# api_example_poe

./: .env  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
api_example_poe/: __init__.py  __main__.py
api_example_poe/app/: app.py
api_example_poe/app/api/v1/: router.py
api_example_poe/app/api/v1/endpoints/: customize.py  enum_.py  health_check.py  labs.py  media.py  params.py  primitive.py
api_example_poe/core/: config.py  logger.py
api_example_poe/usecase/: api_impls.py  models.py
docs/: openapi.json  redoc.html
log/: request.log.2023-05-23
rust_client/: Cargo.toml
rust_client/api_example_poe_api/: Cargo.toml  README.md
rust_client/api_example_poe_api/.openapi-generator/: FILES
rust_client/api_example_poe_api/docs/: DefaultApi.md  Dir.md  EnumModel.md  ParamRespModel.md  Tag1Api.md  UnionModel.md
rust_client/api_example_poe_api/src/apis/: default_api.rs  mod.rs  tag1_api.rs
rust_client/api_example_poe_api/src/models/: data.rs  dir.rs  enum_model.rs  mod.rs  param_resp_model.rs  union_model.rs
rust_client/src/: main.rs
scripts/: check_log.py  format.sh  generate_client.py  generate_dirty.py  generate_docs.py  test_format.py
tests/: test_health_check.py
