[tool.poetry]
name = "api-example-poe"
version = "0.1.0"
description = ""
authors = ["MasakiKobayashi0884 <masaki.kobayashi@amifiable.co.jp>"]
readme = "README.md"
packages = [{ include = "api_example_poe" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["all"], version = "^0.95.2" }
pillow = "^9.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"
black = "^23.3.0"
pytest = "^7.3.1"
mypy = "^1.3.0"
pytest-memray = "^1.4.0"

[tool.poetry.scripts]
start = "api_example_poe.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["ALL"]
ignore = ["D"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
